fix: card alignment on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -352,7 +352,7 @@ hr {
     grid-template-rows: 16rem auto;
 
     .thumb-box {
-      min-width: 95vw;
+      min-width: 92vw;
     }
   }
 }
